firmware/defmt-test/macros/tests/ui/teardown-has-should-error-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[teardown]
    #[should_error]
    fn teardown() {}
}
